Fixed popular posts is not wrap

--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -78,6 +78,7 @@ section.widget {
   @include mq(sm) {
     div.mumu-widget-posts-list {
       display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
 
       div.entry {
@@ -89,6 +90,7 @@ section.widget {
   @include mq(md) {
     div.mumu-widget-posts-list {
       display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
 
       div.entry {
@@ -102,7 +104,7 @@ section.widget {
   section.widget {
     div.mumu-widget-posts-list {
       display: flex;
-      flex-wrap: column;
+      flex-direction: column;
 
       div.entry {
         a {
@@ -118,6 +120,7 @@ section.widget {
     @include mq(sm) {
       div.mumu-widget-posts-list {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
 
         div.entry {
@@ -129,6 +132,7 @@ section.widget {
     @include mq(md) {
       div.mumu-widget-posts-list {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
 
         div.entry {
@@ -140,6 +144,7 @@ section.widget {
     @include mq(lg) {
       div.mumu-widget-posts-list {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
 
         div.entry {
